--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,6 @@
-user.properties.file=C:\\Users\\game_\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Lenovo\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
