finish program shop side.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,16 @@ dist.jar=${dist.dir}/RequestPrint.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=C:\\Program Files\\NetBeans 8.1\\jdatechooser\\jdatechooser\\DateChooser.jar
+file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.1\\jdatechooser\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
