--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=C:\\Program Files\\NetBeans 8.1\\jdatechooser\\jdatechooser\\DateChooser.jar
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.1\\jdatechooser\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=/Users/jirayupeach/Downloads/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -38,7 +39,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
